Correct the 31 revision notes, which the earlier audit never opened
The audit covered the 578 Java files and the folder indexes. It did not touch
the notes, roadmaps and Q&A files, even though those were in scope from the
start. This pass closes that gap: 8,204 lines reviewed across six subject areas.

Roughly 220 factual errors fixed. Each correction is marked in place with what
the note used to say and why it was wrong, so the distinction is learnable
rather than silently replaced.

Wrong answers that would have cost marks in an interview
- The "highest paid per department" SQL silently dropped the highest-paid person
  in the company: a NULL dept_id forms a NULL group and NULL = NULL is UNKNOWN,
  so that row never joins back. Verified against a real database; the self-join
  returned 2 of 3 rows, the RANK() version returns all 3.
- Nth-highest-salary returned the same salary twice: DENSE_RANK is evaluated per
  row and the query lacked DISTINCT. Of 12 queries taken from the notes, 5
  returned something other than what the note claimed.
- Median of two sorted arrays binary-searched the first array without first
  guaranteeing it is the shorter one. Reproduced: [1,2,3,4,5] with [6] throws
  ArrayIndexOutOfBoundsException.
- The next-permutation pivot test was inverted, which yields the PREVIOUS
  permutation. Five of six array-rotation index bounds threw.
- A record was shown extending a sealed class, which does not parse, as the
  answer to whether a record can be a sealed subclass. It must be an interface.
- The OSI table was numbered upside down, making "L7 load balancer" mean a hub.
- CAP was stated as a permanent choice of two from three, including "CA".
- The quorum table offered W = N/2, R = N/2 as balanced, which is W + R = N,
  contradicted by the next row of the same table.

Out-of-date facts
- Class loader notes still described the Extension ClassLoader and rt.jar, both
  removed in Java 9. CMS was marked deprecated in 14, when it was removed then.
- S